...
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium_3"
            app:cardCornerRadius="@dimen/margin_medium"
            app:cardElevation="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCoverBookDetail"
                android:layout_width="110dp"
                android:layout_height="160dp"
                android:elevation="@dimen/margin_medium"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_holder" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actionBarBookDetail"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
...
            tools:text="A Brief History Of Time"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_1x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWriterBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleBookDetail"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_toEndOf="@+id/mcCoverBookDetail"
            android:maxLines="2"
            tools:text="Stephen Hawking"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_regular_2x" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTypeBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWriterBookDetail"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:layout_toEndOf="@+id/mcCoverBookDetail"
...
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_card_medium_2"
            android:layout_toEndOf="@+id/tvBookTypeBookDetail"
            app:srcCompat="@drawable/ic_baseline_circle_secondary_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTypeBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWriterBookDetail"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small_smaller"
            android:layout_marginEnd="@dimen/margin_medium_3"
...
            android:layout_height="0.5dp"
            android:layout_below="@+id/mcCoverBookDetail"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@color/colorPrimaryLight" />

        <LinearLayout
            android:id="@+id/llButtonsBookDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vHorizontalLineOneBookDetail"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_large"
...
            android:layout_below="@+id/llButtonsBookDetails"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium_3"
            app:srcCompat="@drawable/info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBooksThatYouBuyBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llButtonsBookDetails"
            android:layout_marginStart="@dimen/margin_card_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_large"
...
            android:layout_height="0.5dp"
            android:layout_below="@+id/iconInfoBookDetail"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:background="@color/colorPrimaryLight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAboutThisEBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vHorizontalLineTwoBookDetail"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_large"
...
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_accent_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookInfoBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAboutThisEBookDetail"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium_3"
...
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingAndReviewBookDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBookInfoBookDetail"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_large"
...
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_accent_24dp" />

        <include
            android:id="@+id/vpRatingAndReview"
            layout="@layout/viewpod_rating_and_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRatingAndReviewBookDetail"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_small" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vpRatingAndReview"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            tools:itemCount="2"
...
