<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="wrap_content"
    tools:context=".fragments.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerEBookBannerHome"
                android:layout_width="@dimen/width_ebook_banner"
                android:layout_height="@dimen/height_ebook_banner"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/margin_medium" />
...
            android:layout_width="match_parent"
            android:layout_below="@+id/llTabLayout"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFirstTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_medium_3"
                tools:text="@string/more_like_don_t_make_me_think_revisit_lbl"
                android:textColor="@color/black"
...
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_3"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_accent_24dp" />

            <include
                android:id="@+id/vpEBookFirstHome"
                layout="@layout/viewpod_e_book_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFirstTitleHome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSecondTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vpEBookFirstHome"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_10dp"
...
                android:layout_below="@+id/vpEBookFirstHome"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_3"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_accent_24dp" />

            <include
                android:id="@+id/vpEBookForYou"
                layout="@layout/viewpod_e_book_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSecondTitleHome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvThirdTitleHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vpEBookForYou"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_10dp"
...
                android:layout_below="@+id/vpEBookForYou"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_3"
                app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_accent_24dp" />

            <include
                android:id="@+id/vpEBookOnYourWishlist"
                layout="@layout/viewpod_e_book_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvThirdTitleHome" />

        </RelativeLayout>
...
