...
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_large"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnClearChip"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/cross"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChipList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/view_holder_chip_list" />

...
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnFilterBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llChipButtons"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_large"
            app:srcCompat="@drawable/ic_baseline_calendar_view_month_24" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFilterBooksLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSortByLibrary"
            android:layout_marginStart="@dimen/margin_card_medium_2"
            android:layout_marginTop="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_card_medium_2"
...
